# BakaBot-plugins

./: CMakeLists.txt  Makefile
src/: CMakeLists.txt  ip.h  sed.cpp
src/dns/: dns.cpp
src/factoid/: factoid.cpp
src/fun/: fun.cpp
src/google/: google.cpp  opts.cmake
src/ipinfo/: ipinfo.cpp
src/sed/: sed.cpp
src/wolfram/: opts.cmake  wolfram.cpp
